# claims

./: .gitignore  Cargo.toml  README.md
.marbles/: marbles.csv
.pi/agents/: clms-judge.md  clms-proposer.md
docs/: archaeology.md
src/: archaeology.rs  cli.rs  commands.rs  error_handling.rs  git.rs  macros.rs  main.rs  models.rs  output.rs  schema.rs  store.rs
src/archaeology/: commit.rs  harvest.rs  proposals.rs  purge.rs  suggest.rs
src/archaeology/commit/: build.rs  candidates.rs  plan.rs  report.rs
src/archaeology/harvest/: parse.rs  scan.rs  walk.rs
src/commands/: add.rs  diff.rs  help_all.rs  install_agents.rs  migrate_integrity.rs  refute.rs  rerun.rs  schema_cli.rs  show.rs  suspect.rs  util.rs  verify.rs
src/commands/rerun/: artifact.rs  drift.rs  evidence.rs  exec.rs  finalize.rs  prior.rs  types.rs
src/commands/verify/: artifact.rs  build.rs  commit.rs  execute.rs  gates.rs
src/help_text/: add.txt  archaeology.txt  diff.txt  migrate_integrity.txt  refute.txt  rerun.txt  schema.txt  stats.txt  top.txt  verify.txt
src/models/: enums.rs  methods.rs
src/output/: claim.rs  stats.rs  timeline.rs
src/output/claim/: ai.rs  evidence.rs  human.rs  plain.rs
src/output/stats/: ai.rs  collect.rs  human.rs  snapshot.rs
src/store/: core.rs  derived.rs  drift.rs  integrity.rs  validation.rs
src/store/core/: graph.rs  migrate.rs  read.rs  resolve.rs  write.rs
src/store/integrity/: checks.rs  key.rs  path.rs  strict.rs
src/store/validation/: artifact.rs  common.rs  documented.rs  observed.rs  (+3 more)
tests/: golden_errors.out  golden_errors.sh
(+8 files in other folders)
