[package]
name = "claims"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claims"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5", features = ["derive", "env"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
colored     = "2.1"
comfy-table = "7.1"
rusqlite    = { version = "0.31", features = ["bundled"] }
blake3      = "1.5"
chrono      = { version = "0.4", features = ["serde"] }
ulid        = { version = "1.1", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
